real-time-stt/rest-api/v5.x/acquire.mdx
---
title: 'Acquire a builder token'
sidebar_position: 1
type: docs
platform_selector: false
hide_table_of_contents: true
description: >
   Acquire a builder token before you start a speech-to-text transcription.
last_update:
  date: 2026-02-07
---

import RestAPILayout from '@site/src/components/rest-api/RestAPILayout';
import LeftColumn from '@site/src/components/rest-api/LeftColumn';
import RightColumn, { Section } from '@site/src/components/rest-api/RightColumn';
import ParameterList, { Parameter } from '@site/src/components/rest-api/ParameterList';
import PathParameter from '@site/src/components/rest-api/PathParameter';
import { Tabs, TabItem } from '@site/src/components/rest-api/Tabs';

<Admonition type="info">
<Vpd k="NAME" /> API versions v5.x and v6.x are deprecated since June 2025 and will reach end-of-life on June 11, 2026. This affects your projects as follows:

- **New projects**: Projects you create starting June 2025 must use v7.0.
- **Existing projects**: If you're using v5.x or v6.x, migrate to v7.0 before June 11, 2026 to avoid service interruption.
</Admonition>

<RestAPILayout>
  <LeftColumn
    method="POST"
    endpoint="https://api.agora.io/v1/projects/{appId}/rtsc/speech-to-text/builderTokens"
  >

Before starting <Vpd k="NAME" /> conversion, call this endpoint to obtain a `builderToken`. The validity period of a `builderToken` is 5 minutes. After acquiring a token, call the [`start`](../v5.x/start) method within the token validity period to start a <Vpd k="NAME" /> task.

## Request

### Path parameters

<PathParameter name="appId" type="string" required={true}>
The App ID of the project
</PathParameter>

### Request body

<div className="api-mime-type">APPLICATION/JSON</div>

<ParameterList title="BODY" required={true}>
  <Parameter name="instanceId" type="string" required={true}>
    User-defined string identifier. Must be no more than 64 characters and can include:

    - All lowercase English letters (a-z)
    - All capital letters (A-Z)
    - Numbers 0-9
    - `-`, `_`

    You can generate multiple builder tokens using an `instanceId`,  but only one token can be used to initiate a task.
  </Parameter>

</ParameterList>

## Response

- If the returned status code is `200`, the request was successful. The response body contains the result of the request.

  <ParameterList title="OK">
    <Parameter name="tokenName" type="string">
      The value of the builder token you use to call other methods.
    </Parameter>
    
    <Parameter name="createTs" type="integer">
      Unix timestamp (seconds) when the builder token was generated.
    </Parameter>

    <Parameter name="instanceId" type="string">
      The `instanceId` you specified in the request.
    </Parameter>
  </ParameterList>

- If the returned status code is not `200`, the request failed.  Refer to `message` and `code` fields to understand the possible reasons for failure.

  <ParameterList title="Non-200">
    <Parameter name="message" type="string">
      The reason why the request failed.
    </Parameter>
    <Parameter name="code" type="integer">
      The error code.
    </Parameter>    
  </ParameterList>

     
</LeftColumn>

<RightColumn>

<Section title="Authorization">
This endpoint requires [Basic Auth](../restful-authentication).
</Section>

<Section title="Request example">

  <Tabs groupId="code-examples">
    <TabItem value="curl" label="curl" default>
      ```bash
      curl --request POST \
        --url https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/builderTokens \
        --header 'Authorization: Basic <credentials>'     
      ```
    </TabItem>
    <TabItem value="python" label="Python">

    ```python
    import requests

    url = "https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/builderTokens"

    headers = {"Authorization": "Basic <credentials>"}

    response = requests.request("POST", url, headers=headers)

    print(response.text)
    ```
    </TabItem>

    <TabItem value="node" label="Node.js">

    ```js
    const url = 'https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/builderTokens';
    const options = {method: 'POST', headers: {Authorization: 'Basic <credentials>'}};

    fetch(url, options)
      .then(res => res.json())
      .then(json => console.log(json))
      .catch(err => console.error(err)); 
    ```
    </TabItem>
  </Tabs>

</Section>
<Section title="Response example">

<Tabs groupId="response-examples">
  <TabItem value="200" label="200" default>

    ```json
    {
      "tokenName": "The value of the builder token you use to call other methods.",
      "createTs": null,
      "instanceId": "The `instanceId` you specified in the request."
    }
    ```
  </TabItem>
  <TabItem value="non-200" label="Non-200">

    ```json
    {
      "message": "The reason why the request failed.",
      "code": null
    }
    ```
  </TabItem>
</Tabs>

</Section>
</RightColumn>
</RestAPILayout>